# blockchain-peer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile
app/: Cargo.toml
app/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs  logger.rs
common/src/config/: db_config.rs  mod.rs  nats_config.rs  peer_config.rs  webserver_config.rs
common/src/intro/: mod.rs
common/src/memory/: blocks_queue.rs  db_queue.rs  feedback_queue.rs  last_hash.rs  lazy_clients.rs  mod.rs
generic/consumer/: Cargo.toml
generic/consumer/src/: architecture.rs  block_form.rs  blocks_loader.rs  lib.rs  tls_config.rs
generic/db/: Cargo.toml
generic/db/src/: lib.rs
generic/db/src/administrator/: db_connector.rs  mod.rs  notifier.rs  synchronizer.rs  web_server.rs
generic/db/src/dto/: block_dto.rs  connection_dto.rs  message_dto.rs  mod.rs
generic/db/src/http/: info_http.rs  mod.rs
generic/db/src/repo/: alter_repo.rs  mod.rs  read_repo.rs
generic/db/src/service/: alter_service.rs  mod.rs  read_service.rs
generic/db/src/utils/: cors_policy.rs  mod.rs
generic/migration/: Cargo.toml
generic/migration/src/: main.rs
generic/peer/: Cargo.toml
generic/peer/src/: lib.rs
generic/peer/src/administrator/: background.rs  interpreter.rs  mod.rs  synchronizer.rs
generic/peer/src/architecture/: constructor.rs  mod.rs  peer_client.rs  peer_server.rs
generic/peer/src/communication/: listener.rs  mod.rs  sender.rs
generic/peer/src/memory/: manager_client.rs  manager_network.rs  manager_server.rs  mod.rs
generic/peer/src/utils/: aes_encryption.rs  mod.rs  rsa_encryption.rs  task_codes.rs
infra/docker/: docker-compose.yml  nats-server.conf
infra/environment/: node.env  node1.env  node2.env
infra/scripts/: run-migrations.sh  run-migrations1.sh  run-migrations2.sh  start-node.sh  start-node1.sh  start-node2.sh
resources/: AppConfig.toml  BuildInfo.toml
resources/migrations/: V1__CREATE_TABLE_BLOCKS.sql  V2__CREATE_TABLE_CONNECTIONS.sql
