[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {workspace = true}
serde = {workspace = true}
once_cell = {workspace = true}
futures = {workspace = true}
serde_json = {workspace = true}
async-nats = {workspace = true}
rustls = {workspace = true}

common = {path = "../../common" }
tokio-rustls = "0.26.2"
rustls-pemfile = "2.2.0"