[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {workspace = true}
tokio-postgres = {workspace = true}
serde = {workspace = true}
blake3 = {workspace = true}
chrono = {workspace = true}
deadpool-postgres = {workspace = true}
base64 = {workspace = true}
axum = {workspace = true}
axum-server = {workspace = true}
http = {workspace = true}
tower-http = {workspace = true}
reqwest = { workspace = true, features = ["json"] }

common = {path = "../../common" }
