[package]
name = "peer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {workspace = true}
once_cell = {workspace = true}
futures = {workspace = true}
openssl = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
rand = {workspace = true}
blake3 = {workspace = true}
chrono = {workspace = true}
base64 = {workspace = true}

common = {path = "../../common" }
